# uprev

./: .gitignore  Dockerfile  docker-compose.yml  index.html  nginx.conf
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/favicon/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/404/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/careers/: page.tsx
frontend/src/app/team/: page.tsx
frontend/src/components/bento/: BentoCard.tsx  BentoVisuals.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatToggle.tsx  ChatWidget.tsx  ChatWindow.tsx  TypingIndicator.tsx
frontend/src/components/effects/: CyberScramble.tsx  MagneticCursor.tsx  NoiseOverlay.tsx  SpotlightGrid.tsx
frontend/src/components/layout/: ContactDrawer.tsx  Footer.tsx  MobileDrawer.tsx  NavDropdown.tsx  Navbar.tsx
frontend/src/contexts/: LanguageContext.tsx  Providers.tsx
frontend/src/data/: mock.ts
frontend/src/hooks/: useChatState.ts  useMediaQuery.ts  useScrollDirection.ts
frontend/src/lib/: api.ts  chatOpener.ts
frontend/src/types/: index.ts
server/: .dockerignore  Dockerfile  add-ons.json  config.py  context.txt  main.py  packages.json  pyproject.toml  seed_db.py
server/agent/: background.py  graph.py  prompts.py  state.py  tools.py
server/api/: chat.py  context.py  meet.py  packages.py  transactions.py  webhooks.py
server/core/: config.py  exceptions.py
server/db/: database.py  models.py  schemas.py
(+42 files in other folders)
