[project]
name = "server"
version = "0.1.0"
description = "UpRev AI Sales Agent Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "alembic>=1.15.0",
    # AI / LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.3.0",
    # HTTP client (for Xendit API)
    "httpx>=0.28.0",
    # Background tasks
    "apscheduler>=3.11.0",
    "psycopg[binary]>=3.2.0",
]
